--- a/package.json
+++ b/package.json
@@ -44,5 +44,9 @@
     "sharp": "^0.33.3",
     "stripe": "^15.3.0",
     "validator": "^13.11.0"
+  },
+  "devDependencies": {
+    "jest": "^29.7.0",
+    "supertest": "^7.0.0"
   }
 }
